Finished the iPad workout scenes.

--- a/90 DWT 3/MainStoryboard_iPad.storyboard
+++ b/90 DWT 3/MainStoryboard_iPad.storyboard
@@ -19986,32 +19986,32 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="5OG-Zv-PZq"/>
+        <segue reference="WqF-X5-TgU"/>
         <segue reference="yBm-vU-nMy"/>
         <segue reference="sRM-Rx-S9o"/>
         <segue reference="uh5-3M-YTA"/>
-        <segue reference="O2i-Ff-zJg"/>
-        <segue reference="ONm-SU-KeA"/>
-        <segue reference="7r7-Ci-68Y"/>
-        <segue reference="ERb-d2-2MV"/>
-        <segue reference="XMT-HH-WLQ"/>
-        <segue reference="n8m-LN-cjU"/>
-        <segue reference="x7H-zW-1lb"/>
-        <segue reference="gEB-2O-nLc"/>
-        <segue reference="cdD-PA-XI3"/>
-        <segue reference="mTj-xd-69t"/>
-        <segue reference="8ua-H3-NiZ"/>
-        <segue reference="0JE-Cs-oDP"/>
-        <segue reference="pcS-8b-z8k"/>
-        <segue reference="eiT-Pg-EVt"/>
-        <segue reference="DRw-bL-4bV"/>
-        <segue reference="PcU-pS-aIC"/>
-        <segue reference="XTi-nD-HBb"/>
-        <segue reference="jaO-ro-KJA"/>
-        <segue reference="ELO-Ed-2Ad"/>
-        <segue reference="hQG-vY-18a"/>
-        <segue reference="3PV-pt-c06"/>
+        <segue reference="gzd-QV-aY2"/>
+        <segue reference="d9i-MD-IKK"/>
+        <segue reference="XwF-Og-1Q1"/>
+        <segue reference="Sh7-2N-Nlb"/>
+        <segue reference="Fkt-UA-Gl0"/>
+        <segue reference="Mxa-pZ-iGE"/>
+        <segue reference="ceE-Vv-lVP"/>
+        <segue reference="d4Z-pB-Byz"/>
+        <segue reference="y7G-XZ-NXQ"/>
+        <segue reference="Wzb-7a-HX4"/>
+        <segue reference="bWm-rn-hvK"/>
+        <segue reference="AUd-gq-xgw"/>
+        <segue reference="RwD-Zt-Yke"/>
+        <segue reference="BoK-uf-LEG"/>
+        <segue reference="b5q-MO-wgs"/>
+        <segue reference="Wpg-Pw-paS"/>
+        <segue reference="uQ5-dD-ztx"/>
+        <segue reference="fRm-sB-0HX"/>
+        <segue reference="F9d-7Q-rsw"/>
+        <segue reference="QrH-87-6Pq"/>
         <segue reference="irs-uI-dtl"/>
+        <segue reference="yvD-OZ-7Wt"/>
         <segue reference="xpF-Yh-KWb"/>
         <segue reference="scS-fn-dqG"/>
     </inferredMetricsTieBreakers>
