Finished all iPad workouts.

--- a/90 DWT 3/iPad_3_Agility_Upper.storyboard
+++ b/90 DWT 3/iPad_3_Agility_Upper.storyboard
@@ -8140,7 +8140,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Yki-AZ-7tw"/>
-        <segue reference="iTN-Zd-gWM"/>
-        <segue reference="rTB-v9-t4I"/>
+        <segue reference="vjo-2k-LmO"/>
+        <segue reference="eqg-gm-Xu6"/>
     </inferredMetricsTieBreakers>
 </document>
