--- a/90 DWT 3/iPad_4_Agility_Lower.storyboard
+++ b/90 DWT 3/iPad_4_Agility_Lower.storyboard
@@ -6915,7 +6915,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="tz7-cY-Sxc"/>
-        <segue reference="hkt-U9-Gy7"/>
-        <segue reference="ny7-5N-0x7"/>
+        <segue reference="uOs-Z8-paC"/>
+        <segue reference="Oor-ae-MeP"/>
     </inferredMetricsTieBreakers>
 </document>
