--- a/90 DWT 3/iPad_5_Devastator.storyboard
+++ b/90 DWT 3/iPad_5_Devastator.storyboard
@@ -6668,7 +6668,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="vqY-pT-2Q0"/>
+        <segue reference="GtQ-fU-O4k"/>
         <segue reference="IA3-wG-PaV"/>
     </inferredMetricsTieBreakers>
 </document>
