--- a/90 DWT 3/iPad_6_Complete_Fitness.storyboard
+++ b/90 DWT 3/iPad_6_Complete_Fitness.storyboard
@@ -5968,7 +5968,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="wA0-QC-Tge"/>
-        <segue reference="UpL-9q-sC2"/>
-        <segue reference="I9O-KJ-kg0"/>
+        <segue reference="PSh-yv-OE9"/>
+        <segue reference="AVA-Sc-YlX"/>
     </inferredMetricsTieBreakers>
 </document>
