--- a/90 DWT 3/iPad_7_The_Goal.storyboard
+++ b/90 DWT 3/iPad_7_The_Goal.storyboard
@@ -6209,7 +6209,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="z6j-n3-ZGv"/>
-        <segue reference="b5j-4m-Dgf"/>
-        <segue reference="zJs-nC-ZjM"/>
+        <segue reference="lzm-65-gnS"/>
+        <segue reference="j1U-P9-e4C"/>
     </inferredMetricsTieBreakers>
 </document>
